crash in video_filter/magnify.c:Filter

In revision c6826ae2, image_Convert can apparently return NULL, which is passed to picture_CopyPixels. As a result p_src->i_planes crashes.

(gdb) p p_filter
$9 = (filter_t *) 0x3909470
(gdb) p p_filter->p_sys
$10 = (void *) 0x3709940
(gdb) p *(filter_sys_t*)p_filter->p_sys
$11 = {p_image = 0x3f00880, i_hide_timeout = 1000000, i_zoom = 16, i_x = 0, i_y = 0, b_visible = true, i_last_activity = 9014702441}
(gdb) p *((filter_sys_t*)p_filter->p_sys)->p_image
$12 = {pf_read = 0x7f90dfa12210 <ImageRead>, pf_read_url = 0x7f90dfa133b0 <ImageReadUrl>, pf_write = 0x7f90dfa129c0 <ImageWrite>, 
  pf_write_url = 0x7f90dfa13140 <ImageWriteUrl>, pf_convert = 0x7f90dfa11ef0 <ImageConvert>, p_parent = 0x3909470, p_dec = 0x0, 
  p_enc = 0x0, p_converter = 0x4609040, outfifo = 0x3632e80}
(gdb) p p_converted
$13 = (picture_t *) 0x0
(gdb) bt
#0  0x00007f90dfa0adec in picture_CopyPixels (p_dst=p_dst@entry=0x39c8560, p_src=p_src@entry=0x0) at misc/picture.c:420
#1  0x00007f90c4cb185b in Filter (p_filter=0x3909470, p_pic=0x1ff2900) at video_filter/magnify.c:225
#2  0x00007f90dfa18ba3 in FilterSingleChainedFilter (f=0x3909470, p_pic=<optimized out>) at misc/filter_chain.c:494
#3  0x00007f90dfa19e78 in filter_chain_VideoFilter (p_chain=0x208db80, p_pic=<optimized out>) at misc/filter_chain.c:514
#4  0x00007f90dfa18ba3 in FilterSingleChainedFilter (f=0x46e3160, p_pic=<optimized out>) at misc/filter_chain.c:494
#5  0x00007f90dfa19e78 in filter_chain_VideoFilter (p_chain=0x261f5f0, p_pic=<optimized out>) at misc/filter_chain.c:514
#6  0x00007f90df9e2c67 in FilterPictureInteractive (sys=0x17b1e70) at video_output/video_output.c:1112
#7  RenderPicture (sys=sys@entry=0x17b1e70, render_now=render_now@entry=false) at video_output/video_output.c:1306
#8  0x00007f90df9e4046 in DisplayPicture (vout=0x17b1e70) at video_output/video_output.c:1523
#9  Thread (object=0x17b1e70) at video_output/video_output.c:1852
#10 0x00007f90df8a96ea in start_thread (arg=0x7f90b2fff700) at pthread_create.c:477
#11 0x00007f90df3d558f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95