magnify: check the image conversion worked

return NULL on failure as we cannot produce the required output.

Fixes #28707